Fix for FB appearing offscreen on big devices.

--- a/static/assets/css/application.css
+++ b/static/assets/css/application.css
@@ -8,13 +8,13 @@ body {
 }
 
 /* Disable Lion shit */
-@media (min-width: 980px) {
+/*@media (min-width: 980px) {
   html, body {
     height: 100%;
     overflow: hidden;
   }
 }
-
+*/
 .center{
     width: 33%;
     margin-left: auto;
